# vibe-coding-guide

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  工作交接报告.md
.codex/: pack-lock.json  (+2 more)
doc-loop-vibe-coding/: MANIFEST.in  SKILL.md  __init__.py  pack-manifest.json  pyproject.toml
doc-loop-vibe-coding/agents/: openai.yaml
doc-loop-vibe-coding/assets/bootstrap/: AGENTS.md
doc-loop-vibe-coding/assets/bootstrap/.codex/contracts/: handoff.template.json  subagent-contract.template.json  subagent-report.template.json
doc-loop-vibe-coding/assets/bootstrap/.codex/handoffs/: CURRENT.md
doc-loop-vibe-coding/assets/bootstrap/.codex/packs/: project-local.pack.json
doc-loop-vibe-coding/assets/bootstrap/.codex/prompts/doc-loop/: 01-planning-gate.md  02-execute-by-doc.md  03-writeback.md
doc-loop-vibe-coding/assets/bootstrap/design_docs/: Global Phase Map and Current Position.md  Project Master Checklist.md
doc-loop-vibe-coding/assets/bootstrap/design_docs/stages/_templates/: Phase Slice Template.md
doc-loop-vibe-coding/assets/bootstrap/design_docs/stages/planning-gate/: initial-project-setup.md
doc-loop-vibe-coding/assets/bootstrap/design_docs/tooling/: Document-Driven Workflow Standard.md  README.md  Session Handoff Standard.md  Subagent Delegation Standard.md
doc-loop-vibe-coding/examples/: handoff.phase-close.json  project-local.pack.json  subagent-contract.worker.json  subagent-report.worker.json
doc-loop-vibe-coding/references/: conversation-progression.md  external-skill-interaction.md  subagent-delegation.md  temporary-override.md  workflow.md
doc-loop-vibe-coding/scripts/: __init__.py  bootstrap_doc_loop.py  validate_doc_loop.py  validate_instance_pack.py
(+793 files in other folders)
